--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,27 @@
 <project>
-<modelVersion>4.0.0</modelVersion>
-<groupId>fr.uga.erods</groupId>
-<artifactId>my-list-app</artifactId>
-<packaging>jar</packaging>
-<version>1.0-SNAPSHOT</version>
-<name>stockage</name>
-<url>http://maven.apache.org</url>
-<dependencies>
-<dependency>
-<groupId>junit</groupId>
-<artifactId>junit</artifactId>
-<version>4.11</version>
-<scope>test</scope>
-</dependency>
-</dependencies>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>fr.uga.gref</groupId>
+	<artifactId>Stockage</artifactId>
+	<packaging>jar</packaging>
+	<version>1.0-SNAPSHOT</version>
+	<name>stockage</name>
+	<url>http://maven.apache.org</url>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>  
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.0.2</version>
+			
+			</plugin>
+		</plugins>
+	</build>
 </project>
