--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,10 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>3.0.2</version>
-			
+		        <configuration>
+					  <source>1.8</source>
+					  <target>1.8</target>
+        		</configuration>
 			</plugin>
 		</plugins>
 	</build>
